fixed layout bugs

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -85,8 +85,8 @@ body {
     display: flex;
     flex-direction: row;
     column-gap: 8px;
-    padding: 8px;
     flex: 1;
+    height: 80vh;
 }
 
 #content {
@@ -117,6 +117,7 @@ body {
     float: left;
     overflow-y: auto;
     flex: 1;
+    padding-top: 8px;
 }
 
 .modifyInfo {
